--- a/app/package.json
+++ b/app/package.json
@@ -2,39 +2,29 @@
   "name": "app",
   "version": "0.1.0",
   "private": true,
-  "license": "GPL-3.0",
   "scripts": {
-    "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
-    "db": "yarn prisma generate && yarn prisma db push",
+    "dev": "next dev",
     "build": "yarn prisma generate && next build",
-    "start": "next start"
+    "db": "yarn prisma generate && yarn prisma db push",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^4.15.0",
-    "cookie": "^0.5.0",
-    "mongoose": "^6.0.12",
-    "next": "^12.0.3",
-    "next-auth": "^4.20.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-tsparticles": "^1.36.0",
-    "swr": "^1.0.1",
-    "uuid": "^9.0.0"
+    "@prisma/client": "^4.16.2",
+    "@types/node": "20.3.3",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.6",
+    "autoprefixer": "10.4.14",
+    "eslint": "8.44.0",
+    "eslint-config-next": "13.4.8",
+    "next": "13.4.8",
+    "postcss": "8.4.24",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "3.3.2",
+    "typescript": "5.1.6"
   },
   "devDependencies": {
-    "@types/mongoose": "^5.11.97",
-    "@types/node": "^18.6.5",
-    "@types/react": "17.0.33",
-    "@types/uuid": "^8.3.4",
-    "autoprefixer": "^10.4.7",
-    "cross-env": "^7.0.3",
-    "eslint": "8.1.0",
-    "eslint-config-next": "11.1.2",
-    "js-cookie": "^3.0.1",
-    "postcss": "^8.4.14",
-    "prisma": "^4.15.0",
-    "tailwindcss": "^3.0.24",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.7.4"
+    "prisma": "^4.16.2"
   }
 }
