--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
     "clsx": "^1.2.1",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
+    "jotai": "^2.2.2",
     "lucide-react": "^0.258.0",
     "next": "13.4.8",
     "next-auth": "^4.22.1",
@@ -34,6 +35,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@swc-jotai/react-refresh": "^0.0.8",
     "prisma": "^4.16.2"
   }
 }
