--- a/app/package.json
+++ b/app/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@prisma/client": "^4.16.2",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.3",
+    "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
     "@types/node": "20.3.3",
