--- a/app/package.json
+++ b/app/package.json
@@ -10,11 +10,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^4.16.2",
+    "@prisma/client": "5",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.3",
+    "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
     "@types/node": "20.3.3",
@@ -23,6 +27,7 @@
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
+    "cmdk": "^0.2.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
     "jotai": "^2.2.2",
@@ -39,6 +44,6 @@
   },
   "devDependencies": {
     "@swc-jotai/react-refresh": "^0.0.8",
-    "prisma": "^4.16.2"
+    "prisma": "5"
   }
 }
