--- a/app/package.json
+++ b/app/package.json
@@ -30,6 +30,7 @@
     "cmdk": "^0.2.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
+    "fuse.js": "^6.6.2",
     "jotai": "^2.2.2",
     "lucide-react": "^0.258.0",
     "next": "13.4.8",
