--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@prisma/client": "5",
+    "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
@@ -35,7 +36,7 @@
     "fuse.js": "^6.6.2",
     "jotai": "^2.2.2",
     "lucide-react": "^0.258.0",
-    "next": "13.4.8",
+    "next": "^13.4.10",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
