--- a/app/package.json
+++ b/app/package.json
@@ -32,6 +32,7 @@
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
+    "date-fns": "^2.30.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
     "fuse.js": "^6.6.2",
@@ -41,6 +42,7 @@
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-day-picker": "^8.8.0",
     "react-dom": "18.2.0",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
