--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
+    "@radix-ui/react-tooltip": "^1.0.6",
     "@react-pdf/renderer": "^3.1.12",
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
