--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "yarn prisma generate && next build",
+    "build": "yarn db && next build",
     "db": "yarn prisma generate && yarn prisma db push",
     "start": "next start",
     "lint": "next lint"
